--- a/_config.yml
+++ b/_config.yml
@@ -174,6 +174,6 @@ theme_config:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/zero1898/zero1898.github.io
-  branch: [branch] #published
-  message: [message]
+  repo: git@github.com:zero1898/zero1898.github.io.git
+  branch: master
+  message: init
